# rust-web-experiments

./: .dir-locals.el  .projectile  README.md
futures-simple-backend/: Cargo.toml
futures-simple-backend/src/: main.rs
futures-todo-microservice/: Cargo.toml
futures-todo-microservice/src/: main.rs
futures-todo-microservice/src/todo/: api.rs  mod.rs  repository.rs
hyper-simple-backend/: Cargo.toml
hyper-simple-backend/src/: main.rs
hyper-todo-microservice/: Cargo.toml  Dockerfile  docker-compose.yml
hyper-todo-microservice/src/: main.rs
hyper-todo-microservice/src/todo/: entity.rs  service.rs
