[package]
name = "futures-todo-microservice"
version = "0.1.0"
authors = ["Periklis Tsirakidis <periklis.tsirakidis@mayflower.de>"]

[dependencies]
bytes = "^0.4"
futures = "^0.1"
futures-cpupool = "^0.1"
httpdate = "^0.2.1"
http-muncher = "^0.3"
rand = "^0.3"
serde = "^1.0.8"
serde_derive = "^1.0.8"
serde_json = "^1.0.2"
tk-http = "^0.2.5"
tokio-core = "^0.1.8"
tokio-io = "^0.1.2"