[package]
name = "futures-todo-microservice"
version = "0.1.0"
authors = ["Periklis Tsirakidis <periklis.tsirakidis@mayflower.de>"]

[dependencies]
bytes = "^0.4"
futures = "^0.1"
futures-cpupool = "^0.1"
serde = "^1.0.8"
serde_derive = "^1.0.8"
serde_json = "^1.0.2"
tokio-core = "^0.1.8"
tokio-io = "^0.1.2"
tokio-http2 = {git = "https://github.com/lambdastackio/tokio-http2", branch = "master"}
tokio-proto = "^0.1.1"
tokio-service = "^0.1.0"